@@ -39,6 +39,7 @@ import org.apache.lucene.document.StoredField;
 import org.apache.lucene.document.StringField;
 import org.apache.lucene.geo.Circle;
 import org.apache.lucene.geo.Component2D;
+import org.apache.lucene.geo.GeoEncodingUtils;
 import org.apache.lucene.geo.GeoUtils;
 import org.apache.lucene.geo.LatLonGeometry;
 import org.apache.lucene.geo.Polygon;
@@ -1750,5 +1751,42 @@ public abstract class BaseGeoPointTestCase extends LuceneTestCase {
         searchSmallSet(
             newDistanceQuery("point", 32.94823588839368, -179.9538113027811, 120000), 20);
     assertEquals(3, td.totalHits.value);
+  }
+
+  public void testNarrowPolygonCloseToNorthPole() throws Exception {
+    IndexWriterConfig iwc = newIndexWriterConfig();
+    iwc.setMergeScheduler(new SerialMergeScheduler());
+    Directory dir = newDirectory();
+    IndexWriter w = new IndexWriter(dir, iwc);
+
+    // index point closes to Lat 90
+    Document doc = new Document();
+    final int base = Integer.MAX_VALUE;
+    addPointToDoc(
+        FIELD_NAME,
+        doc,
+        GeoEncodingUtils.decodeLatitude(base - 2),
+        GeoEncodingUtils.decodeLongitude(base - 2));
+    w.addDocument(doc);
+    w.flush();
+
+    // query testing
+    final IndexReader reader = DirectoryReader.open(w);
+    final IndexSearcher s = newSearcher(reader);
+
+    double minLat = GeoEncodingUtils.decodeLatitude(base - 3);
+    double maxLat = GeoEncodingUtils.decodeLatitude(base);
+    double minLon = GeoEncodingUtils.decodeLongitude(base - 3);
+    double maxLon = GeoEncodingUtils.decodeLongitude(base);
+
+    Query query =
+        newPolygonQuery(
+            FIELD_NAME,
+            new Polygon(
+                new double[] {minLat, minLat, maxLat, maxLat, minLat},
+                new double[] {minLon, maxLon, maxLon, minLon, minLon}));
+
+    assertEquals(1, s.count(query));
+    IOUtils.close(w, reader, dir);
   }
 }
